Idk man im tired

--- a/index.html
+++ b/index.html
@@ -1,1 +1,12 @@
-No bye-bye. What am I doing wrong?
+<!DOCTYPE html>
+<html>
+    <head>
+
+    </head>
+    <body>
+        <h1>Level 1 heading</h1>
+        <p>This is my first paragraph</p>
+        <p>No bye-bye. What am I doing wrong?</p> 
+        <p>maybe</p>
+    </body>
+</html> 
